<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CFCFCF"
    tools:context=".NavigationView.PrivacyPolicyActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card1"
        android:elevation="10dp"
        android:padding="10dp"
        app:cardElevation="3dp"
        app:layout_constraintTop_toTopOf="parent">
        <me.biubiubiu.justifytext.library.JustifyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="#000"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/add_back"
            android:text="@string/privacy_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp" />
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        app:cardElevation="3dp"
        android:id="@+id/card2"
        android:paddingTop="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/card1">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <me.biubiubiu.justifytext.library.JustifyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="#000"
                android:id="@+id/tv_privacy_heading"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:background="@drawable/add_back"
                android:text="@string/privacy_personal_heading"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="5dp" />
            <me.biubiubiu.justifytext.library.JustifyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_privacy_heading"
                android:textColor="#000"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:background="@drawable/add_back"
                android:text="@string/privacy_personal"
                android:layout_marginTop="5dp" />
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        app:cardElevation="3dp"
        android:id="@+id/card3"
        android:paddingTop="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/card2">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="#000"
                android:id="@+id/tv_privacy_cookies"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:background="@drawable/add_back"
                android:text="@string/privacy_cookies_heading"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="5dp" />
            <me.biubiubiu.justifytext.library.JustifyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_privacy_cookies"
                android:textColor="#000"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:background="@drawable/add_back"
                android:text="@string/privacy_cookies"
                android:layout_marginTop="5dp" />
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        app:cardElevation="3dp"
        android:id="@+id/card4"
        android:paddingTop="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/card3">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="#000"
                android:id="@+id/tv_privacy_information"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:background="@drawable/add_back"
                android:text="@string/privacy_information_heading"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="5dp" />
            <me.biubiubiu.justifytext.library.JustifyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_privacy_information"
                android:textColor="#000"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:background="@drawable/add_back"
                android:text="@string/privacy_information"
                android:layout_marginTop="5dp" />
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        app:cardElevation="3dp"
        android:id="@+id/card5"
        android:paddingTop="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/card4">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="#000"
                android:id="@+id/tv_privacy_service"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:background="@drawable/add_back"
                android:text="@string/privacy_service_heading"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="5dp" />
            <me.biubiubiu.justifytext.library.JustifyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_privacy_service"
                android:textColor="#000"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:background="@drawable/add_back"
                android:text="@string/privacy_service"
                android:layout_marginTop="5dp" />
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        app:cardElevation="3dp"
        android:id="@+id/card6"
        android:paddingTop="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/card5">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="#000"
                android:id="@+id/tv_privacy_policy"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:background="@drawable/add_back"
                android:text="@string/privacy_policy_heading"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="5dp" />
            <me.biubiubiu.justifytext.library.JustifyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_privacy_policy"
                android:textColor="#000"
                android:id="@+id/privacy_policy"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:background="@drawable/add_back"
                android:text="@string/privacy_policy"
                android:layout_marginTop="5dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_email"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"
                android:textColor="#000"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/privacy_policy"
                />
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>

</ScrollView>